WEB-4854: Fixing the overlap issue in the Comms tab

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -8367,3 +8367,8 @@ input[type="radio"].resolution_radio_button {
 .complaint-uri-input {
   width: 65%;
 }
+
+// ensuring no column overlap in Case History due to long strings
+#case-history .case-history-preview, #case-history .case-history-author {
+  word-break: break-word;
+}
